k8s/confirmed/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: testapp
  namespace: testapp
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: testappfronted-svc
                port:
                  number: 80
